feat: add endpoint users with pagination
Добавил маршрут получения списка пользователей.
